--- a/ejercicio1/index.html
+++ b/ejercicio1/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adivina el Número</title>
-    <!-- Enlace a Bootstrap CSS -->
+    <meta name="description" content="juego adivina el numero">
+    <meta name="keywords" content="juego, numeros,adivina,">
+    <meta name="author" content="Belen Molina>
+     <title>Adivina el Número</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
@@ -24,9 +26,7 @@
     </div>
 </div>
 
-<!-- Enlace a Bootstrap JS y Popper.js -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-<!-- Enlace a jQuery -->
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script src= "./script.js "></script>
 </script>
