--- a/ejercicio1/index.html
+++ b/ejercicio1/index.html
@@ -2,11 +2,12 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="juego adivina el numero">
+   <meta name="description" content="juego adivina el numero">
     <meta name="keywords" content="juego, numeros,adivina,">
-    <meta name="author" content="Belen Molina>
-     <title>Adivina el Número</title>
+    <meta name="author" content="Belen Molina" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Adivina el Número</title>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
